# spotify-likes-to-lastfm

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
