[project]
name = "spotifylikestolastfm"
version = "0.1.0"
description = "Spotify to Last.fm - Transfer Liked Songs Script"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["dotenv>=0.9.9", "pylast>=5.5.0", "spotipy>=2.25.1"]

[dependency-groups]
dev = ["ruff>=0.9.9"]

[tool.ruff.format]
indent-style = "tab"
